--- a/src/app/B-tech-lateral/lateral-personal-details/lateral-personal-details.component.html
+++ b/src/app/B-tech-lateral/lateral-personal-details/lateral-personal-details.component.html
@@ -1,4 +1,9 @@
-<form #LateralPersonaDetails="ngForm" (ngSubmit)="saveLateralPersonal(LateralPersonaDetails.value)"><div class="container">
+
+<h2>Access Denied</h2>
+
+
+
+<!-- <form #LateralPersonaDetails="ngForm" (ngSubmit)="saveLateralPersonal(LateralPersonaDetails.value)"><div class="container">
     <div class="row">
     <div class="col-lg12">
     <div class="col-lg-4">
@@ -29,7 +34,7 @@
     <td>{{item.Password}}</td>
     </tr>
     </tbody>
-    </table>
+    </table> -->
 
     
 
